--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,17 +6,17 @@ on:
       duration:
         description: '🕐 Thời gian sử dụng'
         required: false
-        default: '24h'
+        default: '5h40m'
         type: choice
         options:
         - '1h'
         - '3h' 
-        - '24h'
+        - '5h40m'
 
 jobs:
   Premium-RDP-Setup:
     runs-on: windows-latest
-    timeout-minutes: 1440
+    timeout-minutes: 340
     
     steps:
       # BANNER CHÀO MỪNG
